force-app/main/default/objects/Sales_Report_Month__c/Sales_Report_Month__c.object-meta.xml
<CustomObject>
    <label>Sales Report Month</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Report Month</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>