force-app/main/default/objects/Sales_Report_Month__c/fields/DateScheduled__c.field-meta.xml
<CustomField>
    <fullName>DateScheduled__c</fullName>
    <label>Date Scheduled</label>
    <type>Date</type>
</CustomField>