force-app/main/default/objects/Sales_Report_Month__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH( DateScheduled__c )</formula>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>