force-app/main/default/objects/Sales_Report_Month__c/fields/Sales_Report__c.field-meta.xml
<CustomField>
    <fullName>Sales_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Report</label>
    <referenceTo>Sales_Report__c</referenceTo>
    <relationshipLabel>Sales Report Month</relationshipLabel>
    <relationshipName>Sales_Report_Month</relationshipName>
    <type>Lookup</type>
</CustomField>